# unofficial-openai-ads-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
contracts/: openai-ads-contract.json  openai-ads-public-openapi.json
docs/: api-surface.md
examples/python/: create_cpc_ad_group.py  pull_insights.py
examples/typescript/: create-cpc-ad-group.ts  pull-insights.ts
python/src/openai_ads/: __init__.py  _client.py  _errors.py  _http.py  _models.py  _pagination.py  _resources.py
python/tests/: test_contracts.py  test_live_api.py  test_sdk.py
