[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "unofficial-openai-ads-sdk"
version = "0.1.1"
description = "Unofficial Python SDK for the OpenAI Ads Advertiser API."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Ilya Baklanov", email = "ilya@baklanov.org" }]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
]

[project.urls]
Homepage = "https://github.com/IBaklanov/unofficial-openai-ads-sdk"
Repository = "https://github.com/IBaklanov/unofficial-openai-ads-sdk"
Issues = "https://github.com/IBaklanov/unofficial-openai-ads-sdk/issues"
Documentation = "https://developers.openai.com/ads/api-overview"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
  "pyright>=1.1.390",
]

[tool.hatch.build.targets.wheel]
packages = ["python/src/openai_ads"]

[tool.hatch.build.targets.sdist]
include = [
  "/python/src/openai_ads",
  "/README.md",
  "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pyright]
include = ["python/src/openai_ads", "python/tests"]
pythonVersion = "3.9"
typeCheckingMode = "standard"
